cmake_minimum_required(VERSION 2.8)
find_package(CUDA REQUIRED)
message("-- CUDA --")
message("Version: " ${CUDA_VERSION})
message("Library: " ${CUDA_CUDA_LIBRARY})
message("Runtime: " ${CUDA_CUDART_LIBRARY})
cuda_add_executable(HELLO hello.cu)
# set(CUDA_SEPARABLE_COMPILATION TRUE)
# set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-arch=sm_61;-Wall;-lcudadevrt;-rdc=true")
# message("CUDA_NVCC_FLAGS" ${CUDA_NVCC_FLAGS})
# target_link_libraries(HELLO ${CUDA_cudadevrt_LIBRARY})
